--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,40 @@ body{
     -moz-transition: left 250ms ease;
     -o-transition: left 250ms ease;
     transition: left 250ms ease;
-    overflow-y: scroll;
+}
+
+.side-panel .logo{
+    height: 50px;
+    border-bottom: 1px solid #d9d9d9;
+    border-right: 1px solid #d9d9d9;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.side-panel .logo span.s1{
+    font-size: 22px;
+    font-weight: bold;
+    /* text-align: center; */
+    padding-left: 16px;
+    color: #2196F3;
+    /* margin: 10px; */
+    /* display: block; */
+}
+
+.side-panel .logo span.s2{
+    font-size: 18px;
+    /* font-weight: bold; */
+    /* text-align: center; */
+    padding: 10px;
+    color: #607D8B;
+    /* display: inline-block; */
+}
+
+.side-panel .menu{
+    overflow-y: auto;
+    height: calc(100vh - 51px);
+    border-right: 1px solid #d9d9d9;
 }
 
 .side-panel .menu ul{
@@ -58,17 +91,55 @@ body{
     left: 0px;
 }
 
+
+
+.top-menu{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    height: 50px;
+    background: #f0f0f0;
+    border-bottom: 1px solid #d7d7d7;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0px;
+
+    -webkit-transition: left 250ms ease;
+    -moz-transition: left 250ms ease;
+    -o-transition: left 250ms ease;
+    transition: left 250ms ease;
+}
+
+.top-menu a{
+    display: block;
+    line-height: 50px;
+   padding: 0px 21px;
+}
+
+.top-menu a:hover{
+    background: #218be0;
+}
+
+
+
 section.content-panel{
     margin: 0px auto;
     position: absolute;
     left: 0px;
-    top: 0px;
+    top: 50px;
     bottom: 0px;
     right: 0px;
     overflow-y: auto;
+    padding: 1.25rem;
 }
 
 .side-panel-opened .content-panel{
+    left: 300px;
+}
+
+.side-panel-opened .top-menu{
     left: 300px;
 }
 
@@ -77,28 +148,12 @@ section.content-panel .content{
     margin: 30px auto;
 }
 
-section.content-panel .top-menu{
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    height: 50px;
-    background: #f0f0f0;
-    border-bottom: 1px solid #d7d7d7;
-}
 
-section.content-panel .top-menu a{
-    display: block;
-    line-height: 50px;
-   padding: 0px 21px;
-}
-
-section.content-panel .top-menu a:hover{
-    background: #218be0;
-}
 
 
 section.content-panel p{
-    line-height: 2.2;
+    line-height: 1.6;
+    text-indent: 2rem;
 }
 
 section.content-panel img{
@@ -109,5 +164,34 @@ code{
     background: #f0f0f0;
     padding: 3px 6px;
     border-radius: 4px;
+}
+
+.article-content{
+/*
+    border-top: 1px dashed #ccc;
+    margin: 1rem 0;
+    padding: 1.5rem 0 0 0;
+*/
+}
+
+.article-content ul{
+    background: #f3f4f7;
+    padding: 50px;
+    padding-left: 70px;
+    padding-top: 40px;
+    border: 1px solid #e7e7f1;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    border-radius: 4px;
+    background: #f7f7f9;
+}
+
+.article-content ul li {
+    margin-top: 10px;
+}
+
+.article-content h1.bordered {
+    padding-bottom: 1rem;
+    border-bottom: 1px dashed #d8d8d8;
 }
 
